// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Card > renders correctly with a leading icon 1`] = `
.c2 {
  display: flex;
}

.c3 {
  display: flex;
}

.c5 {
  display: flex;
  align-items: center;
  justify-content: center;
  flex-shrink: 0;
  width: 24px;
  height: 24px;
  transform: rotate(0deg);
}

.c5 svg {
  color: #292924!important;
}

.c6 {
  font-family: CircularXX;
  font-size: 16px;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 1.33;
  text-align: left;
  color: #292924;
}

.c0 {
  background: #f1e9dc;
  box-sizing: border-box;
  border-radius: 16px;
  padding: 16px;
  position: relative;
  overflow: hidden;
}

@media (min-width: 0px) {
  .c1 {
    padding: 0px;
  }
}

@media (min-width: 0px) {
  .c2 {
    justify-content: space-between;
  }
}

@media (min-width: 0px) {
  .c2 {
    align-items: center;
  }
}

@media (min-width: 0px) {
  .c3 {
    align-items: center;
  }
}

@media (min-width: 0px) {
  .c4 {
    margin-right: 12px;
  }
}

@media (min-width: 0px) {
  .c7 {
    margin-top: 0px;
  }
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        class="c2"
      >
        <div
          class="c3"
        >
          <span
            class="c4 c5"
            data-testid="info-container"
          >
            <svg
              fill="none"
              height="100%"
              viewBox="0 0 24 24"
              width="100%"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M12 0C5.383 0 0 5.383 0 12s5.383 12 12 12 12-5.383 12-12S18.617 0 12 0zm-1 6.99a1 1 0 112 0c0 .553-.447 1.005-1 1.005-.553 0-1-.442-1-.995v-.01zM11 11a1 1 0 112 0v7a1 1 0 11-2 0v-7zm-9 1c0 5.514 4.486 10 10 10s10-4.486 10-10S17.514 2 12 2 2 6.486 2 12z"
                fill="currentColor"
                fill-rule="evenodd"
              />
            </svg>
          </span>
          <div
            class=""
          >
            <p
              class="c6"
              cursor="inherit"
              title=""
            >
              Card Title
            </p>
          </div>
        </div>
      </div>
      <div
        class="c7"
      />
    </div>
  </div>
</div>
`;

exports[`Card > renders correctly with a visual 1`] = `
.c4 {
  display: flex;
}

.c5 {
  display: flex;
}

.c6 {
  font-family: CircularXX;
  font-size: 16px;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 1.33;
  text-align: left;
  color: #292924;
}

.c0 {
  background: #f1e9dc;
  box-sizing: border-box;
  border-radius: 16px;
  padding: 0px;
  position: relative;
  overflow: hidden;
}

.c1 {
  width: 100%;
  margin-top: -16px;
}

.c2 {
  width: 100%;
  background-image: url('/src/Card/storybook/placeHolderImage.svg');
  background-size: cover;
  background-repeat: no-repeat;
  background-position: center;
  padding-top: 100%;
}

@media (min-width: 0px) {
  .c3 {
    padding: 16px;
  }
}

@media (min-width: 0px) {
  .c4 {
    justify-content: space-between;
  }
}

@media (min-width: 0px) {
  .c4 {
    align-items: center;
  }
}

@media (min-width: 0px) {
  .c5 {
    align-items: center;
  }
}

@media (min-width: 0px) {
  .c7 {
    margin-top: 0px;
  }
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        class="c2"
      />
    </div>
    <div
      class="c3"
    >
      <div
        class="c4"
      >
        <div
          class="c5"
        >
          <div
            class=""
          >
            <p
              class="c6"
              cursor="inherit"
              title=""
            >
              Card Title
            </p>
          </div>
        </div>
      </div>
      <div
        class="c7"
      />
    </div>
  </div>
</div>
`;

exports[`Card > renders correctly with action button 1`] = `
.c2 {
  display: flex;
}

.c3 {
  display: flex;
}

.c4 {
  font-family: CircularXX;
  font-size: 16px;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 1.33;
  text-align: left;
  color: #292924;
}

.c0 {
  background: #f1e9dc;
  box-sizing: border-box;
  border-radius: 16px;
  padding: 16px;
  position: relative;
  overflow: hidden;
}

.c7 {
  position: relative;
  background-color: #ff88c8;
  box-shadow: none;
  color: #292924;
  padding: 0 20px;
  outline: none;
  border-radius: 10000px;
  font-weight: 500;
  cursor: pointer;
  line-height: 100%;
  font-size: 16px;
  opacity: 1;
  width: auto;
}

.c7:focus-visible {
  outline: 2px solid #292924;
  outline-offset: 2px;
}

.c7:hover {
  background-color: #f759a9;
}

.c7:active {
  background-color: #e43e93;
}

.c8 {
  display: flex;
  align-items: center;
  justify-content: center;
  opacity: 1;
}

.c9 {
  padding: 16px 0;
  flex-grow: 1;
}

@media (min-width: 0px) {
  .c1 {
    padding: 0px;
  }
}

@media (min-width: 0px) {
  .c2 {
    justify-content: space-between;
  }
}

@media (min-width: 0px) {
  .c2 {
    align-items: center;
  }
}

@media (min-width: 0px) {
  .c3 {
    align-items: center;
  }
}

@media (min-width: 0px) {
  .c5 {
    margin-top: 0px;
  }
}

@media (min-width: 0px) {
  .c6 {
    margin-top: 16px;
  }
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        class="c2"
      >
        <div
          class="c3"
        >
          <div
            class=""
          >
            <p
              class="c4"
              cursor="inherit"
              title=""
            >
              Card Title
            </p>
          </div>
        </div>
      </div>
      <div
        class="c5"
      />
      <div
        class="c6"
      >
        <button
          class="c7"
        >
          <div
            class="c8"
          >
            <div
              class="c9 childrenContainer"
            >
              Action
            </div>
          </div>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Card > renders correctly with fallback style 1`] = `
.c2 {
  display: flex;
}

.c3 {
  display: flex;
}

.c4 {
  font-family: CircularXX;
  font-size: 16px;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 1.33;
  text-align: left;
  color: #292924;
}

.c0 {
  background: #ffffff;
  box-sizing: border-box;
  border-radius: 16px;
  padding: 16px;
  position: relative;
  overflow: hidden;
}

@media (min-width: 0px) {
  .c1 {
    padding: 0px;
  }
}

@media (min-width: 0px) {
  .c2 {
    justify-content: space-between;
  }
}

@media (min-width: 0px) {
  .c2 {
    align-items: center;
  }
}

@media (min-width: 0px) {
  .c3 {
    align-items: center;
  }
}

@media (min-width: 0px) {
  .c5 {
    margin-top: 0px;
  }
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        class="c2"
      >
        <div
          class="c3"
        >
          <div
            class=""
          >
            <p
              class="c4"
              cursor="inherit"
              title=""
            >
              Card Title
            </p>
          </div>
        </div>
      </div>
      <div
        class="c5"
      />
    </div>
  </div>
</div>
`;

exports[`Card > renders correctly with title and body 1`] = `
.c2 {
  display: flex;
}

.c3 {
  display: flex;
}

.c4 {
  font-family: CircularXX;
  font-size: 16px;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 1.33;
  text-align: left;
  color: #292924;
}

.c5 {
  font-family: CircularXX;
  font-size: 16px;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 1.33;
  text-align: left;
  color: #636768;
}

.c0 {
  background: #f1e9dc;
  box-sizing: border-box;
  border-radius: 16px;
  padding: 16px;
  position: relative;
  overflow: hidden;
}

@media (min-width: 0px) {
  .c1 {
    padding: 0px;
  }
}

@media (min-width: 0px) {
  .c2 {
    justify-content: space-between;
  }
}

@media (min-width: 0px) {
  .c2 {
    align-items: center;
  }
}

@media (min-width: 0px) {
  .c3 {
    align-items: center;
  }
}

@media (min-width: 0px) {
  .c6 {
    margin-top: 0px;
  }
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        class="c2"
      >
        <div
          class="c3"
        >
          <div
            class=""
          >
            <p
              class="c4"
              cursor="inherit"
              title=""
            >
              Card Title
            </p>
            <p
              class="c5"
              cursor="inherit"
              title=""
            >
              This is the card body.
            </p>
          </div>
        </div>
      </div>
      <div
        class="c6"
      />
    </div>
  </div>
</div>
`;
